2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	* src/*.h: Change extern "C" to G_BEGIN_DECLS/G_END_DECLS
	* src/layers.h:
	* src/layers.c: Add layers_reload() to reload the layer styles.
	* data/roadster.glade
	* src/mainwindow.c: Add "Debug" menu and "Reload Styles" menuitem.

2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	* data/Makefile.am:
	* configure.ac: Add dependency on libxml-2.0.
	* data/layers.xml: Map layer styles defined in XML.
	* src/main.c:
	* src/map.c:
	* src/layers.h:
	* src/layers.c: Load map layer styles from an XML file.

2005-03-02  Nathan Fredrickson  <nathan@silverorange.com>
	* src/Makefile.am:
	* configure.ac: Check separately for libsvg and continue if not found. Define HAVE_LIBSVG if present.

2005-03-02  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* search_road.c:
	* map.c:
	* db.c: Switch to binary format for MySQL geometry results.

2005-03-01  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* road.c:
	* road.h: Added with code removed from map module.
	* geometryset.c:
	* geometryset.h: Removed.
	* map.c: Moved static data to road.c. Removed global map object and moved to allocated map object (all map_* functions take a map pointer now). Trying to switch to threaded rendering (currently disabled).
	* db.c: Added support for locking.
	* mainwindow.c: Now owns an allocated map object. Switched from single-click to double-click to move around.
	* gotowindow.c:	Talk to mainwindow only, not map.
	* layers.c: Don't store loaded map data in the layers settings structure.  (Stored in map object now.)
	* main.c: Changed main_init() to return boolean.
	* scenemanager.c: Removed global data, switched to allocated (a scenemanager is owned by a map).
	* search.c: Can now deal with search strings containing newlines and other whitespace junk.
	* search_road.c: Perform exact-match for street names of 3 or fewer chars for speed and results quality.

2005-02-28  Nathan Fredrickson  <nathan@silverorange.com>