@@ -53,7 +53,7 @@
 			  <signal name="activate" handler="on_import_maps_activate" last_modification_time="Tue, 25 Jan 2005 19:06:57 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image9539">
+			    <widget class="GtkImage" id="image9542">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-open</property>
 			      <property name="icon_size">1</property>
@@ -74,7 +74,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image9540">
+			    <widget class="GtkImage" id="image9543">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-open</property>
 			      <property name="icon_size">1</property>
@@ -204,7 +204,7 @@
 			  <accelerator key="g" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image9541">
+			    <widget class="GtkImage" id="image9544">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-jump-to</property>
 			      <property name="icon_size">1</property>
@@ -310,10 +310,10 @@
 			  <property name="label" translatable="yes">Reload Styles</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="on_reloadstylesmenuitem_activate" last_modification_time="Thu, 03 Mar 2005 07:25:08 GMT"/>
-			  <accelerator key="r" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+			  <accelerator key="F5" modifiers="0" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image9542">
+			    <widget class="GtkImage" id="image9545">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-refresh</property>
 			      <property name="icon_size">1</property>
